# ronelan_dashboard_bundle

./: .gitmodules  BOR2.H  DEVELOPMENT_PROGRESS.md  EDGE_SYNC_PROCESS.md  MIGRATION-2MODE-COMPLETE.md  Makefile  README.md  config.env  heidenhain_sender.py  test_dnc_api.py  test_dnc_websocket.py  test_program.H
backend_backup_20251002/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  WARP.md  docker-compose.yml  go.mod  go.sum  progress_summary.md  session_context.md
backend_backup_20251002/LLM_SCRIPTS/: check_status.sh  deploy_edge_agent.sh  fresh_db_test.sh  restart_backend.sh  start_all_agents.sh  start_backend.sh  stop_all_agents.sh
backend_backup_20251002/archive/: ARCHITECTURE.md  ARCHITECTURE_BY_CLAUDE.md  CONTRIBUTING.md  EDGE_ARCHITECTURE.md  EDGE_DEBUG.md  README.md  README_claude.md
backend_backup_20251002/edge/dnc-service/: README.md  pyproject.toml
backend_backup_20251002/edge/dnc-service/dnc_service/: main.py  progress.py
backend_backup_20251002/edge/dnc-service/dnc_service/templates/: transfer.html
docs/: README.md
frontend_backup_20251002/: .env.production  BACKEND_INTEGRATION_GUIDE.md  DESIGN_DEVELOPMENT_GUIDE.md  LICENSE  MACHINE_MANAGEMENT_GUIDE.md  NEXT_STEPS_REPORT.md  README.md  WEBSOCKET_IMPLEMENTATION_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  warp.md
frontend_backup_20251002/backend/feeder_service/: pyproject.toml
frontend_backup_20251002/backend/feeder_service/app/: __init__.py  main.py  models.py  ws.py
scripts/: detect-and-deploy.sh
(+148 files in other folders)
